# spooky_scoreboard_daemon

./: .gitattributes  .gitignore  1-build-binaries.sh  2-build-installer.sh  3-deploy-to-usb.bat  CMakeLists.txt  INSTALL.md  PKGBUILD  README.md  install.sh  main.cpp  ssb.sh  ssbd.c  vcpkg.json
.github/workflows/: ci.yml
docker/: build.sh
docker/arch/acnc/: Dockerfile
docker/arch/hwn/: Dockerfile  yaml-cpp.patch
docker/debian/ed/: Dockerfile
docker/debian/tcm/: Dockerfile
docker/hwn-arch/: Dockerfile
docs/: GAMENOTES.md  INSTALL.HWN_UM.md  INSTALL.md
installer/: Dockerfile  README  config  generate.sh  getty@tty1-override.conf  install.sh  syslinux.cfg
scripts/: install-UP-HWN_UM.sh
src/: Config.cpp  Config.h  CurlHandler.cpp  CurlHandler.h  GameBase.cpp  GameBase.h  Player.cpp  Player.h  QrCode.cpp  QrCode.h  QrScanner.cpp  QrScanner.h  Register.cpp  Register.h  RegistrationHandler.cpp  RegistrationHandler.h  WebSocket.cpp  WebSocket.h  WebSocketHandler.cpp  WebSocketHandler.h  main.cpp  main.h  version.h  x11.cpp  x11.h
src/font/: Ghoulish.h  Roboto.h
src/fonts/: Ghoulish.h
src/game/: AliceCooperNightmareCastle.cpp  AliceCooperNightmareCastle.h  EvilDead.cpp  EvilDead.h  Halloween.cpp  Halloween.h  TexasChainsawMassacre.cpp  TexasChainsawMassacre.h  TotalNuclearAnnihilation.cpp  TotalNuclearAnnihilation.h  Ultraman.cpp  Ultraman.h  ed.cpp  ed.h  hwn.cpp  hwn.h  tcm.cpp  tcm.h  tna.cpp  tna.h  um.cpp  um.h
src/include/: CurlHandler.h  GameBase.h  QrScanner.h  main.h  version.h  x11.h
src/include/font/: Roboto.h
src/include/game/: ed.h  hwn.h  tcm.h  tna.h  um.h
